fix visibility

--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -84,7 +84,6 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    visibility: hidden;
 
     //overlay close icon
     &:before {
@@ -144,7 +143,6 @@
 
     &.show {
         opacity: 1;
-        visibility: visible;
 
         .mobile-nav__menu {
             transform: translateX(0);
